added colab button to noteboooks

--- a/gocart_python.ipynb
+++ b/gocart_python.ipynb
@@ -9,6 +9,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "70aeb5c3",
+   "metadata": {},
+   "source": [
+    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/saneku/Dust_emission_simulator/gocart_python.ipynb)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 13,
    "id": "a6ef47b1",
