--- a/afwa_python.ipynb
+++ b/afwa_python.ipynb
@@ -9,8 +9,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "75d8eb11",
+   "metadata": {},
+   "source": [
+    "# Dust_emission_simulator\n",
+    "Mimicking WRF-Chem's v4.2 dust emissions (dust_opt=11 GOCART and dust_opt=13 AFWA) with MOSAIC aerosols."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1de9160c",
+   "metadata": {},
+   "source": [
+    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/saneku/Dust_emission_simulator/afwa_python.ipynb)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "id": "a6ef47b1",
    "metadata": {},
    "outputs": [],
@@ -30,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "id": "90513c49",
    "metadata": {},
    "outputs": [
@@ -81,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "id": "f10e1800",
    "metadata": {},
    "outputs": [
@@ -89,7 +106,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/jk/8sw3mvsn77dbcxpv6nr291x46937hf/T/ipykernel_7990/4006909684.py:15: UserWarning: The input coordinates to pcolormesh are interpreted as cell centers, but are not monotonically increasing or decreasing. This may lead to incorrectly calculated cell edges, in which case, please supply explicit cell edges to pcolormesh.\n",
+      "/Users/ukhova/Downloads/Dust_emission_simulator/afwa_source_dust.py:146: RuntimeWarning: divide by zero encountered in double_scalars\n",
+      "  gravsm[j,i]=100.0*volsm[j, i]/((1.0-porosity[isltyp[j, i]])*(2.65*(1-massfrac[0,j,i])+2.50*massfrac[0,j,i]))\n",
+      "/var/folders/jk/8sw3mvsn77dbcxpv6nr291x46937hf/T/ipykernel_2740/4006909684.py:15: UserWarning: The input coordinates to pcolormesh are interpreted as cell centers, but are not monotonically increasing or decreasing. This may lead to incorrectly calculated cell edges, in which case, please supply explicit cell edges to pcolormesh.\n",
       "  cs = m.pcolormesh(x, y, flux, cmap=colmap, norm=ai_norm)\n"
      ]
     },
@@ -137,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "id": "7f83e40a",
    "metadata": {},
    "outputs": [
@@ -145,7 +164,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/jk/8sw3mvsn77dbcxpv6nr291x46937hf/T/ipykernel_7990/3331053218.py:16: UserWarning: The input coordinates to pcolormesh are interpreted as cell centers, but are not monotonically increasing or decreasing. This may lead to incorrectly calculated cell edges, in which case, please supply explicit cell edges to pcolormesh.\n",
+      "/var/folders/jk/8sw3mvsn77dbcxpv6nr291x46937hf/T/ipykernel_2740/3331053218.py:16: UserWarning: The input coordinates to pcolormesh are interpreted as cell centers, but are not monotonically increasing or decreasing. This may lead to incorrectly calculated cell edges, in which case, please supply explicit cell edges to pcolormesh.\n",
       "  cs = m.pcolormesh(x, y, wrf_chems_flux[time_idx], cmap=colmap, norm=ai_norm)\n"
      ]
     },
